DI with tsyringe, refactoring and docs updated
